--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://www.discussione.xyz/",
   "dependencies": {
     "dompurify": "^2.2.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
     "rethinkdb": "^2.4.2",
     "uuid": "^8.3.2",
     "ws": "^7.4.2"
