Single File Component arch. with Vite, Typescript, and vue3

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -29,6 +29,8 @@
   },
   "plugins": ["vue", "@typescript-eslint"],
   "rules": {
+    "no-plusplus": "off",
+    "no-console": "warn",
     "import/extensions": [
       "error",
       "ignorePackages",
