--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/core": "^2.0.0-alpha.30",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "lodash.clonedeep": "^4.5.0",
     "vite-plugin-restart": "0.0.2",
     "vue": "^3.2.16",
     "vue-router": "^4.0.0-0",
@@ -26,6 +27,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.20.0",
